# KernelX

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.mk
.cargo/: config.toml
c/cmake/: filelist.cmake
c/include/klib/: stdlib.h
c/lib/tlsf/: CMakeLists.txt
c/src/klib/: stdlib.c
clib/: CMakeLists.txt  Makefile
clib/cmake/: filelist.cmake
clib/cmake/toolchain/: loongarch64.cmake  qemu-virt-riscv64.cmake  riscv64.cmake
clib/include/arch/riscv/: entry.h
clib/include/klib/: klib.h
clib/include/klib/arch/riscv/: asm.h
clib/lib/libfdt/: CMakeLists.txt
clib/lib/lwext4/include/: ext4_config.h
clib/lib/tlsf/: tlsf.c
clib/src/arch/loongarch/: switch.S
clib/src/arch/riscv/: entry.S  kerneltrap.S  swtich.S  traphandle.S  usertrap.S
clib/src/arch/riscv/entry/: addr.S  entry.S  fdt.c  init.c  mapkernel.c  symbol.S
clib/src/arch/riscv/trap/: fpu.S  kerneltrap.S  usertrap.S
clib/src/fs/ext4/: create.c  dir.c  filesystem.c  fstat.c  inode.c  mkdir.c  read.c  write.c
clib/src/klib/: malloc.c  string.c
clib/src/platform/qemu-virt-riscv64/: boot.S
clib/src/platform/starfive-jh7110-riscv64/: boot.S
cmake/: filelist.cmake  riscv64-toolchain.cmake
config/: .gitignore  Kconfig  config.mk
docs/: arch.md  boot.md  content.md  driver.md  filesystem.md  getting_started.md  ipc.md  memory.md  task.md  utask.md
docs/static/: addrspace.drawio
include/kernelx/: console.hpp  klib.h  sbi.hpp  syscall.hpp
include/kernelx/mm/: page.hpp
include/kernelx/progress/: manager.hpp  pcb.hpp  trap.hpp
include/kernelx/sync/: spinlock.hpp
kernel/: Makefile
kernel/.cargo/: config.toml
kernel/resource/riscv/: resource.S
kernel/scripts/: build.rs
kernel/scripts/linker/: qemu-virt-riscv64.ld
kernel/src/: main.rs
kernel/src/driver/: manager.rs  mod.rs
kernel/src/fs/: file.rs  filestat.rs  filesystem.rs  init.rs  mod.rs
kernel/src/kernel/: errno.rs  main.rs  mod.rs
kernel/src/klib/: kalloc.rs  klog.rs  mod.rs
lib/lwext4_rust/: Cargo.toml  build.rs
lib/lwext4_rust/src/: fs.rs  lib.rs
lib/tinyprintf/: tinyprintf.c
lib/tlsf/: tlsf.c
scripts/: build.rs  linker.ld  package.sh  qemu.mk
scripts/cmake/: common.cmake  env.cmake  parse_config.cmake
scripts/env/: riscv64.env
scripts/flags/: riscv64.cmake
scripts/linker/: qemu-virt-riscv64.ld  riscv64.ld  starfive-jh7110-riscv64.ld
src/: console.cpp  main.cpp  main.rs
src/arch/: arch.rs  mod.rs
src/arch/riscv/: arch.rs  cpu.rs  fdt.rs  init.rs  mod.rs  plic.rs
src/arch/riscv64/: csrrw.cpp  entry.S  sbi.cpp  usertrap.S  usertrap.cpp
src/driver/: device.rs  driver.rs  fdt.rs  manager.rs  matcher.rs  mod.rs
src/driver/block/: mod.rs  virtio.rs
src/driver/char/: kconsole.rs  mod.rs  tty.rs
src/driver/chosen/: kclock.rs  kconsole.rs  kpmu.rs  mod.rs
src/driver/rtc/: goldfish.rs  mod.rs
src/driver/virtio/: hal.rs  matcher.rs  mod.rs
src/fs/: file.rs  filesystem.rs  init.rs  mod.rs  perm.rs
src/fs/devfs/: def.rs  devnode.rs  mod.rs  null.rs  root.rs  superblock.rs  zero.rs
src/fs/ext4/: ffi.rs  filesystem.rs  inode.rs  mod.rs  superblock.rs  superblock_inner.rs
src/fs/file/: charfile.rs  dirresult.rs  file.rs  fileop.rs  filestat.rs  mod.rs
src/fs/inode/: cache.rs  index.rs  inode.rs  manager.rs  mod.rs  mode.rs
src/fs/memfs/: filesystem.rs  inode.rs  mod.rs  superblock.rs
src/fs/memtreefs/: inode.rs  mod.rs  superblock.rs
src/fs/mount/: manager.rs
src/fs/procfs/: inode_.rs  mod.rs  superblock.rs
src/fs/rootfs/: mod.rs  superblock.rs
src/fs/tmpfs/: filesystem.rs  inode.rs  mod.rs  superblock.rs
src/fs/vfs/: dentry.rs  fileop.rs  fsop.rs  init.rs  mod.rs  rootfs.rs  stdout.rs  superblock_table.rs  vfs.rs
src/kernel/: config.rs  errno.rs  main.rs  mod.rs  timer.rs  trap.rs
src/kernel/api/: dirent.rs  mod.rs  sigaction.rs  sigframe.rs  signum.rs
src/kernel/event/: def.rs  event.rs  mod.rs  poll.rs  waitqueue.rs
src/kernel/ipc/: mod.rs  pipe.rs  waitqueue.rs
src/kernel/ktask/: task.rs
src/kernel/kthread/: mod.rs  task.rs  thread.rs
src/kernel/mm/: addrspace.rs  frame.rs  mod.rs  page.rs  ubuf.rs  uptr.rs  vdso.rs
src/kernel/scheduler/: current.rs  kernelstack.rs  mod.rs  processor.rs  scheduler.rs  task.rs  tid.rs
src/kernel/syscall/: def.rs  event.rs  fs.rs  futex.rs  ipc.rs  misc.rs  mm.rs  mod.rs  num.rs  signal.rs  task.rs  time.rs  uid.rs  uptr.rs
src/kernel/task/: def.rs  fdtable.rs  initprocess.rs  kernelstack.rs  manager.rs  mod.rs  pcb.rs  tcb.rs  tid.rs
src/kernel/timer/: event.rs  timer.rs
src/klib/: defer.rs  initcell.rs  kalloc.rs  klog.rs  ksync.rs  malloc.cpp  mod.rs  pagearray.rs  print.rs  printf.cpp  random.rs  ring.rs  string.cpp  utils.rs
src/mm/: page.cpp
src/platform/: mod.rs
src/progress/: manager.cpp
src/syscall/: syscall.cpp
tests/: .gitignore  build.sh
tests/basic-glibc/: bug_poll.c  dummy.c  forkexec.c  kill.c  mkdir.c  pipe.c  ppoll_time32.c  sigaction.c  unlink.c  waitsleep.c
tests/basic-glibc-static/: open.c  printf.c  sleep.c  write.c
tests/basic-musl/: brk.c
tests/basic-ulib/: forkexec-child.c  helloworld.c  read.c  write.c
tests/helloworld/: helloworld.S
tests/os-func/: tinter.c  tintr.c
usertests/: build.sh
usertests/basic-glibc/: Makefile  fork.c  fstat.c  getdents.c  mmap.c  mmap_file_shared.c  ppoll_time32.c  pselect.c  readdir.c  rename.c  setitimer.c  sigaction.c  sigchld.c  vfork.c
usertests/basic-glibc-static/: Makefile  forkexec-child.c  getdents.c  loopsleep.c  mkdir.c
usertests/basic-musl/: Makefile  forkexec.c  writev.c
usertests/basic-ulib/: Makefile  args-child.c  args.c  brk.c  forkexec.c
usertests/filesystem/: tempfile.c  tmpfs.c  write.c
usertests/helloworld/: Makefile
usertests/os-func/: Makefile  swap.c
usertests/pthread/: Makefile  cancel0.c  cancel1.c  cond.c
usertests/pthread-musl/: Makefile  cancel1.c
usertests/stdio/: Makefile  key.c
vdso/: CMakeLists.txt  Makefile  vdso.S
vdso/scripts/: symbols.py
vdso/src/arch/loongarch/: signal_trampoline.S
vdso/src/arch/riscv/: signal_trampoline.S
(+205 files in other folders)
